Added description and keywords to the home and page1 files

--- a/page1.html
+++ b/page1.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="home_files/app.css">
        
 	<title>Home | COVID-19 Info Center</title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">	
+    <meta name="description" content="Covid-19 Inforcenter website. Get information on the most popular Covid-19 vaccines">
+    <meta name="keywords" content="Covid-19, Covid, Vaccine, Popular">
 </head>
 
 <body>
