Added images to the homepage, modified text content

--- a/home.html
+++ b/home.html
@@ -75,11 +75,17 @@
             <div class="col content">
 
                 <div class="row">
-                    <h2 id="content" class="open d-lg-block">Keep up to date with the latest COVID-19 News</h2>
-                </div>
-
-                <div class="cdc-2020-bar container">
-
+                    <div class="jumbotron">
+                        <h1 class="display-4">Keep up to date with the latest COVID-19 News</h1>
+                        <p class="lead">Learn more about the virus, possible symptoms, vaccines and much more.</p>
+                        <img src="images/home-banner-1.jpg" alt="Representation of the COVID virus"
+                             class="img-fluid rounded">
+                        <hr class="my-4">
+                        <p>Start reading more about the available COVID-19 vaccines by clicking the button below</p>
+                        <p class="lead">
+                            <a class="btn btn-primary btn-lg" href="page1.html" role="button">Learn more</a>
+                        </p>
+                    </div>
                 </div>
 
                 <div class="syndicate">
@@ -107,6 +113,7 @@
                                         seafood market. Investigations are ongoing as to how this virus originated and
                                         spread.
                                     </p>
+                                    <img src="images/virus-origin-map.jpg" alt="" class="img-fluid rounded img-fluid">
                                 </div>
                             </div>
                         </div>
@@ -116,20 +123,28 @@
                             <div class="card border-0 rounded-0">
                                 <div class="card-body bg-quaternary">
                                     <h2 class="card-title h3 mb-3 text-left">Worried you have COVID-19?</h2>
-                                    <p>Here are some common symptoms</p>
-                                    <ul>
-                                        <li>Cough</li>
-                                        <li>Fever or chills</li>
-                                        <li>Shortness of breath or difficulty breathing</li>
-                                        <li>Muscle or body aches</li>
-                                        <li>Sore throat</li>
-                                        <li>New loss of taste or smell</li>
-                                        <li>Diarrhea</li>
-                                        <li>Headache</li>
-                                        <li>New fatigue</li>
-                                        <li>Nausea or vomiting</li>
-                                    </ul>
-                                    <p>If you have a fever or any kind of respiratory difficulty such as coughing or
+                                    <div class="row">
+                                        <div class="col">
+                                            <p>Here are some common symptoms</p>
+                                            <ul>
+                                                <li>Cough</li>
+                                                <li>Fever or chills</li>
+                                                <li>Shortness of breath or difficulty breathing</li>
+                                                <li>Muscle or body aches</li>
+                                                <li>Sore throat</li>
+                                                <li>New loss of taste or smell</li>
+                                                <li>Diarrhea</li>
+                                                <li>Headache</li>
+                                                <li>New fatigue</li>
+                                                <li>Nausea or vomiting</li>
+                                            </ul>
+                                        </div>
+                                        <div class="col">
+                                            <img src="images/virus-infographic.jpg" alt="Virus infographic"
+                                                 class="img-fluid rounded">
+                                        </div>
+                                    </div>
+                                    <p class="mt-2">If you have a fever or any kind of respiratory difficulty such as coughing or
                                         shortness of breath, call your doctor or a health care provider and explain your
                                         symptoms over the phone before going to the doctor’s office, urgent care
                                         facility or emergency room.
