Add images to page 3

--- a/page3.html
+++ b/page3.html
@@ -104,6 +104,10 @@
                                                     emergency use of the vaccine to prevent Covid-19 in individuals 16 years of age and older under an Emergency Use
                                                     Authorization (EUA). The vaccine uses messenger RNA, a genetic material that our cells read to make proteins.
                                                 </p>
+                                                <br>
+                                                <img src="images/pfizer-biontech.jpg" alt="Pfizer-BioNTech Covid-19 vaccine" class="img-fluid">
+                                                <br>
+                                                <br>
                                                 <p>
                                                     What is mRNA?
                                                 </p>
@@ -187,6 +191,7 @@
                                                 dose.
                                             </li>
                                         </ul>
+                                        <img src="images/get-vaccine.png" alt="Vaccine banner" class="img-fluid">
                                     </div>
                                 </div>
                             </div>
