update description and keywords for page1.html

--- a/page1.html
+++ b/page1.html
@@ -11,7 +11,7 @@
        
 	<title>Home | COVID-19 Info Center</title>
     <meta name="description" content="add information about vaccine1 - Sinovac">
-    <meta name="keywords" content="html">	
+    <meta name="keywords" content="information about sinovac covid-19 vaccine">	
 </head>
 
 <body>
