--- a/page3.html
+++ b/page3.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="home_files/app.css">
        
 	<title>Home | COVID-19 Info Center</title>
-    <meta name="description" content="Covid-19 Inforcenter website. Get information on the most popular Covid-19 vaccines">
-    <meta name="keywords" content="Covid-19, Covid, Vaccine, Popular">
+    <meta name="description" content="Information about Pfizer-BioNTech Covid-19 vaccine">
+    <meta name="keywords" content="Pfizer-BioNTech, Pfizer, BioNTech, vaccine, Covid-19, Covid">
 </head>
 
 <body>
