--- a/home.html
+++ b/home.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="home_files/bootstrap.css">
     <link rel="stylesheet" href="home_files/app.css">
 
+    <script src="home_files/main.js"></script>
+
     <title>Home | COVID-19 Info Center</title>
     <meta name="description"
           content="Covid-19 Inforcenter website. Get information on the most popular Covid-19 vaccines">
@@ -35,28 +37,23 @@
             <ul class="nav navbar-nav nav-justified w-100">
 
                 <li class="nav-item" id="menu_home">
-                    <a class="nav-link active" href="home.html">
+                    <a class="nav-link" href="home.html">
                         Home </a>
                 </li>
 
                 <li class="nav-item" id="menu1">
                     <a class="nav-link" href="page1.html">
-                        Menu 1 </a>
+                        Sinovac Vaccine </a>
                 </li>
 
                 <li class="nav-item" id="menu2">
                     <a class="nav-link" href="page2.html">
-                        Menu 2 </a>
+                        Covaxin Vaccine </a>
                 </li>
 
                 <li class="nav-item" id="menu3">
                     <a class="nav-link" href="page3.html">
-                        Menu 3 </a>
-                </li>
-
-                <li class="nav-item" id="menu4">
-                    <a class="nav-link" href="page4.html">
-                        Menu 4 </a>
+                        Pfizer-BioNTech Vaccine </a>
                 </li>
 
             </ul>
