--- a/page2.html
+++ b/page2.html
@@ -40,25 +40,20 @@
 
                     <li class="nav-item" id="menu1">
                         <a class="nav-link" href="page1.html">
-                            Menu 1						</a>
+                               Sinovac Vaccine						</a>
                     </li>
 
                     <li class="nav-item" id="menu2">
                         <a class="nav-link" href="page2.html">
-                            Menu 2						</a>
+                           Covaxin Vaccine							</a>
                     </li>
 
                     <li class="nav-item" id="menu3">
                         <a class="nav-link" href="page3.html">
-                            Menu 3						</a>
+                            Pfizer-BioNTech Vaccine							</a>
                     </li>
 
-                    <li class="nav-item" id="menu4">
-                        <a class="nav-link" href="page4.html">
-                            Menu 4						</a>
-                    </li>
-
-                </ul>
+             </ul>
             </nav>
         </div>
     </div>
