Update-page1-content

--- a/page1.html
+++ b/page1.html
@@ -104,33 +104,10 @@
                                             <br>
                                             <br>
                                             <p>
-                                                <b>Name: </b>Sinova / CoronaVac
-                                            </p>
-                                            <p>
-                                                <b>Manufacturer:</b> Sinovac Biotech Ltd
-                                            </p>
-                                            <p>
-                                                <b>Country of origin:</b> China
-                                            </p>
-                                            <p>
-                                                <b>Price (per dose):</b> US$13.60 to US$29.75
-                                            </p>
-                                            <p>
-                                                <b>Total no.of does ordered:</b> 12 million
-                                            </p>
-                                            <p>
-                                                <b>Number of does required:</b> 2 doses, intramuscular
-                                            </p>
-                                            <p>
-                                                <b>Type of vaccine:</b> An inactivated vaccine/ Whole virus vaccine
-                                            </p>
-
-                                            <p>
-                                                <b>Effectiveness:</b> Turkey-91.25%, Indonesia-65.3%, Brazil-50.4%
-                                            </p>
-                                            <p>
-                                                <b>Challenges of this type of vaccine:</b> Booster shots may be
-                                                required.
+                                                Sinovac, also known as CoronaVac, is a covid-19 vaccine. It is manufactured by Sinovac Biotech Ltd. 
+                                                Its country of origin is China. The published price per dose of the Sinovac vaccine ranges from US$13.60 to US$29.75. So far, the total number of does ordered has reached 12 million.  
+                                                The number of doses required per person is 2 doses at intramuscular. The type of vaccine is a whole virus vaccine or an inactivated vaccine. The Sinovac vaccine's effectiveness in Turkey is 91.25%, Indonesia is 65-3%, and Brazil is 50.4%. 
+                                                The Challenge of this type of vaccine is booster shots may be required.
                                             </p>
 
                                         </div>
