An embedded video has been added to the page2

--- a/page2.html
+++ b/page2.html
@@ -240,6 +240,17 @@
 
 
                                     </p>
+									
+													   <div class="row ">
+                        <div class="col-md-12">
+                            <div class="card border-0 rounded-0">
+                                <div class="card-body bg-quaternary">
+                                    <h2 class="card-title h3 mb-3 text-left"> Covaxin video/ 
+                                        COVID-19 vaccine</h2>
+                                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/fB7bbDbDmQ0" 
+								title="Covaxin video" frameborder="0" allow="accelerometer; autoplay; 
+								clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
 
                                 </div>
                             </div>
