--- a/home.html
+++ b/home.html
@@ -150,6 +150,27 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row ">
+                        <div class="col-md-12">
+                            <div class="card border-0 rounded-0">
+                                <div class="card-body bg-quaternary">
+                                    <h2 class="card-title h3 mb-3 text-left">
+                                        Recognizing Day to Day Signs and
+                                        Symptoms of Coronavirus
+                                    </h2>
+                                    <iframe 
+                                        class="w-100"
+                                        height="500"
+                                        src="https://www.youtube.com/embed/U8r3oTVMtQ0"
+                                        title="Recognizing Day to Day Signs and Symptoms of Coronavirus" 
+                                        frameborder="0"
+                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                        allowfullscreen>
+                                    </iframe>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
