Add video about the vaccine

--- a/page3.html
+++ b/page3.html
@@ -214,6 +214,22 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row ">
+                        <div class="col-md-12">
+                            <div class="card border-0 rounded-0">
+                                <div class="card-body bg-quaternary">
+                                    <h2 class="card-title h3 mb-3 text-left">Pfizer-BioNTech Covid-19 vaccine video</h2>
+                                    <iframe width="500"
+                                    height="316" 
+                                    src="https://www.youtube.com/embed/rgfNxtp3yX0" 
+                                    title="YouTube video player" 
+                                    frameborder="0" 
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                                    allowfullscreen></iframe>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
