--- a/page1.html
+++ b/page1.html
@@ -55,6 +55,11 @@
                         Pfizer-BioNTech Vaccine </a>
                 </li>
 
+                <li class="nav-item" id="menu4">
+                    <a class="nav-link" href="register.html">
+                        Vaccine Registration </a>
+                </li>
+
             </ul>
         </nav>
     </div>
