--- a/page2.html
+++ b/page2.html
@@ -55,6 +55,10 @@
                     <a class="nav-link" href="page3.html">
                         Pfizer-BioNTech Vaccine </a>
                 </li>
+				   <li class="nav-item" id="menu4">
+                    <a class="nav-link" href="register.html">
+                        Vaccine Registration </a>
+                </li>
 
             </ul>
         </nav>
