Embedded the vaccine chart from ourwordindata.org

--- a/home.html
+++ b/home.html
@@ -2,19 +2,19 @@
 <html class="theme-cyan cdc-page-type-content cdc-2020" lang="en-us">
 
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta content="text/html; charset=UTF-8" http-equiv="content-type">
     <meta charset="utf-8">
 
-    <link rel="shortcut icon" href="favicon.ico">
-    <link rel="stylesheet" href="home_files/bootstrap.css">
-    <link rel="stylesheet" href="home_files/app.css">
+    <link href="favicon.ico" rel="shortcut icon">
+    <link href="home_files/bootstrap.css" rel="stylesheet">
+    <link href="home_files/app.css" rel="stylesheet">
 
     <script src="home_files/main.js"></script>
 
     <title>Home | COVID-19 Info Center</title>
-    <meta name="description"
-          content="Covid-19 Inforcenter website. Get information on the most popular Covid-19 vaccines">
-    <meta name="keywords" content="Covid-19, Covid, Vaccine, Popular">
+    <meta content="Covid-19 Inforcenter website. Get information on the most popular Covid-19 vaccines"
+          name="description">
+    <meta content="Covid-19, Covid, Vaccine, Popular" name="keywords">
 </head>
 
 <body>
@@ -75,8 +75,8 @@
                     <div class="jumbotron">
                         <h1 class="display-4">Keep up to date with the latest COVID-19 News</h1>
                         <p class="lead">Learn more about the virus, possible symptoms, vaccines and much more.</p>
-                        <img src="images/home-banner-1.jpg" alt="Representation of the COVID virus"
-                             class="img-fluid rounded">
+                        <img alt="Representation of the COVID virus" class="img-fluid rounded"
+                             src="images/home-banner-1.jpg">
                         <hr class="my-4">
                         <p>Start reading more about the available COVID-19 vaccines by clicking the button below</p>
                         <p class="lead">
@@ -110,7 +110,19 @@
                                         seafood market. Investigations are ongoing as to how this virus originated and
                                         spread.
                                     </p>
-                                    <img src="images/virus-origin-map.jpg" alt="" class="img-fluid rounded img-fluid">
+                                    <img alt="" class="img-fluid rounded img-fluid" src="images/virus-origin-map.jpg">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row ">
+                        <div class="col-md-12">
+                            <div class="card border-0 rounded-0 mb-3">
+                                <div class="card-body ">
+                                    <h2 class="card-title h3 mb-3 text-left">Vaccination Progress in Malaysia</h2>
+                                    <iframe loading="lazy"
+                                            src="https://ourworldindata.org/explorers/coronavirus-data-explorer?zoomToSelection=true&pickerSort=desc&pickerMetric=population&Metric=People+vaccinated&Interval=Cumulative&Relative+to+Population=true&Align+outbreaks=false&country=~MYS&hideControls=true"
+                                            style="width: 100%; height: 600px; border: 0px none;"></iframe>
                                 </div>
                             </div>
                         </div>
@@ -137,11 +149,12 @@
                                             </ul>
                                         </div>
                                         <div class="col">
-                                            <img src="images/virus-infographic.jpg" alt="Virus infographic"
-                                                 class="img-fluid rounded">
+                                            <img alt="Virus infographic" class="img-fluid rounded"
+                                                 src="images/virus-infographic.jpg">
                                         </div>
                                     </div>
-                                    <p class="mt-2">If you have a fever or any kind of respiratory difficulty such as coughing or
+                                    <p class="mt-2">If you have a fever or any kind of respiratory difficulty such as
+                                        coughing or
                                         shortness of breath, call your doctor or a health care provider and explain your
                                         symptoms over the phone before going to the doctor’s office, urgent care
                                         facility or emergency room.
@@ -158,14 +171,14 @@
                                         Recognizing Day to Day Signs and
                                         Symptoms of Coronavirus
                                     </h2>
-                                    <iframe 
-                                        class="w-100"
-                                        height="500"
-                                        src="https://www.youtube.com/embed/U8r3oTVMtQ0"
-                                        title="Recognizing Day to Day Signs and Symptoms of Coronavirus" 
-                                        frameborder="0"
-                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                        allowfullscreen>
+                                    <iframe
+                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                            allowfullscreen
+                                            class="w-100"
+                                            frameborder="0"
+                                            height="500"
+                                            src="https://www.youtube.com/embed/U8r3oTVMtQ0"
+                                            title="Recognizing Day to Day Signs and Symptoms of Coronavirus">
                                     </iframe>
                                 </div>
                             </div>
