Check registration page

--- a/register.html
+++ b/register.html
@@ -11,7 +11,7 @@
 
     <script src="home_files/main.js"></script>
 
-    <title>Sinovac Vaccine | COVID-19 Info Center</title>
+    <title>Vaccine Registration| COVID-19 Info Center</title>
     <meta name="description" content="add vaccine registration form">
     <meta name="keywords" content="register for covid-19 vaccine">
 
@@ -87,6 +87,11 @@
                     <a class="nav-link" href="register.html">
                         Vaccine Registration </a>
                 </li>
+				 <li class="nav-item" id="menu5">
+                    <a class="nav-link" href="check_registration.html">
+                      Check Vaccine Registration </a>
+                </li>
+
 
             </ul>
         </nav>
