--- a/page1.html
+++ b/page1.html
@@ -59,7 +59,10 @@
                     <a class="nav-link" href="register.html">
                         Vaccine Registration </a>
                 </li>
-
+	 <li class="nav-item" id="menu5">
+                    <a class="nav-link" href="check_registration.html">
+                      Check Vaccine Registration </a>
+                </li>
             </ul>
         </nav>
     </div>
