--- a/page3.html
+++ b/page3.html
@@ -21,8 +21,9 @@
 <div class="container-fluid site-title">
     <!-- <div class=""> -->
     <div class="container">
-        <div class="row">
-            <h3>COVID-19 Info Center</h3>
+        <div class="row justify-content-between">
+            <h3 class="col-4">COVID-19 Info Center</h3>
+            <h4 class="col-4 text-right">L1-team08</h4>
         </div>
     </div>
 </div>
