--- a/register.html
+++ b/register.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="home_files/bootstrap.css">
     <link rel="stylesheet" href="home_files/app.css">
 
-    <script src="home_files/main.js"></script>
+    
 
     <title>Vaccine Registration| COVID-19 Info Center</title>
     <meta name="description" content="add vaccine registration form">
@@ -26,7 +26,7 @@
             font-size: 30px;
             padding-bottom: 10px;
         }
-        .button_center{
+        .button-center{
             text-align: center;
             padding-bottom: 20px;
         }
@@ -45,78 +45,69 @@
 </head>
 
 <body>
-
-<div class="container-fluid site-title">
-    <!-- <div class=""> -->
-    <div class="container">
-        <div class="row justify-content-between">
-            <h3 class="col-4">COVID-19 Info Center</h3>
-            <h4 class="col-4 text-right">L1-team08</h4>
+    <div class="container-fluid site-title">
+        <!-- <div class=""> -->
+        <div class="container">
+            <div class="row justify-content-between">
+                <h3 class="col-4">COVID-19 Info Center</h3>
+                <h4 class="col-4 text-right">L1-team08</h4>
+            </div>
         </div>
     </div>
-</div>
 
-<div id="cdc-meganav-wrapper">
+    <div id="cdc-meganav-wrapper">
+        <div class="container" id="cdc-meganav-bar">
+            <nav class="navbar navbar-expand-xl yamm">
+                <ul class="nav navbar-nav nav-justified w-100">
+                    <li class="nav-item" id="menu-home">
+                        <a class="nav-link " href="home.html">
+                            Home </a>
+                    </li>
 
-    <div class="container" id="cdc-meganav-bar">
+                    <li class="nav-item" id="menu1">
+                        <a class="nav-link" href="page1.html">
+                            Sinovac Vaccine </a>
+                    </li>
 
-        <nav class="navbar navbar-expand-xl yamm">
+                    <li class="nav-item" id="menu2">
+                        <a class="nav-link" href="page2.html">
+                            Covaxin Vaccine </a>
+                    </li>
 
-            <ul class="nav navbar-nav nav-justified w-100">
-
-                <li class="nav-item" id="menu_home">
-                    <a class="nav-link " href="home.html">
-                        Home </a>
-                </li>
-
-                <li class="nav-item" id="menu1">
-                    <a class="nav-link" href="page1.html">
-                        Sinovac Vaccine </a>
-                </li>
-
-                <li class="nav-item" id="menu2">
-                    <a class="nav-link" href="page2.html">
-                        Covaxin Vaccine </a>
-                </li>
-
-                <li class="nav-item" id="menu3">
-                    <a class="nav-link" href="page3.html">
-                        Pfizer-BioNTech Vaccine </a>
-                </li>
-
-                <li class="nav-item" id="menu4">
-                    <a class="nav-link" href="register.html">
-                        Vaccine Registration </a>
-                </li>
-				 <li class="nav-item" id="menu5">
-                    <a class="nav-link" href="check_registration.html">
-                      Check Vaccine Registration </a>
-                </li>
-
-            </ul>
-        </nav>
+                    <li class="nav-item" id="menu3">
+                        <a class="nav-link" href="page3.html">
+                            Pfizer-BioNTech Vaccine </a>
+                    </li>
+                    <li class="nav-item" id="menu4">
+                        <a class="nav-link" href="register.html">
+                            Vaccine Registration </a>
+                    </li>
+                    <li class="nav-item" id="menu5">
+                        <a class="nav-link" href="check_registration.html">
+                            Check Vaccine Registration </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </div>
-</div>
-
-
 
     <form action="reg_process.php" method="POST">
         <table class="center">
             <tr>
                 <th>Name: </th>
-                <td><input type="text" name="input_name"></input></td>
+                <td><input type="text" name="input_name"></td>
             </tr>
             <tr>
                 <th>NRIC: </th>
-                <td><input type="text" name="input_nric"></input></td>
+                <td><input type="text" name="input_nric"></td>
             </tr>
         </table>
-        <div class="button_center">
+        <div class="button-center">
             <button type="submit" >Register</button>
         </div>
     </form>
     <p style="text-align:center">Click <a href="check_registration.html" style="color: red;">here</a> to check whether you have registered for vaccination.</p>
-
+    <script src="home_files/main.js"></script>
 </body>
 </html>
 
